# Distributed_file_system

DFS/include/: connectionwidget.hpp  loginwidget.hpp  mainwidget.hpp  networkmanager.hpp  registrationwidget.hpp
DFS/src/: connectionwidget.cpp  loginwidget.cpp  mainwidget.cpp  networkmanager.cpp  registrationwidget.cpp  window.cpp
Prototypes/ClientServer/: was_here.txt
Prototypes/ClientServer/Client/: CMakeLists.txt  build.bat  client.cpp  client.hpp  client_interface.cpp  client_interface.hpp  client_main.cpp  main.cpp
Prototypes/ClientServer/Server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  server_main.cpp
